@@ -1,3 +1,15 @@
+2011-04-18  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r84112.
+        http://trac.webkit.org/changeset/84112
+        https://bugs.webkit.org/show_bug.cgi?id=58770
+
+        Chromium linux layout tests are broken. (Requested by loislo2
+        on #webkit).
+
+        * Scripts/webkitpy/layout_tests/layout_package/test_result_writer.py:
+        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:
+
 2011-04-17  Daniel Bates  <dbates@webkit.org>
 
         Reviewed by Eric Seidel and Adam Barth.
